# exalink-campo

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  fases.md
.claude/: settings.local.json
ESP32/AP/: README.md  platformio.ini
ESP32/Cliente/: platformio.ini  pre_upload.py
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_paddock_color.py  003_fields_zones.py  004_device_provisioning.py  005_alert_configs.py  005_water_points_visits.py  006_alert_configs.py
backend/app/: main.py
backend/app/api/v1/: alert_configs.py  alerts.py  animals.py  auth.py  dashboard.py  devices.py  establishments.py  health.py  import_data.py  lora.py  noc.py  paddocks.py  provision.py  reproduction.py  router.py  weights.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  alert.py  alert_config.py  animal.py  base.py  device.py  establishment.py  geofence.py  health.py  herd.py  location.py  paddock.py  reproduction.py  tenant.py  user.py  weight.py
backend/app/schemas/: __init__.py  alert.py  alert_config.py  animal.py  auth.py  device.py  establishment.py  health.py  paddock.py  reproduction.py  weight.py
backend/app/services/: mqtt_consumer.py
docs/: architecture.md  roadmap.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
scripts/: fix_migrations.sh  redeploy_clean.sh  reset_db.sh  seed_demo.py  simulate_gps.py
(+109 files in other folders)
